src/main/jkube/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    jkube.io/scm-url: https://gitlab.fic.udc.es/ferramentas.2025/gymtonic
    jkube.io/issue-system: Redmine
    jkube.io/issue-tracker-url: https://redmine.fic.udc.es/projects/gymtonic/issues
    jkube.io/scm-tag: head
  labels:
    app: gymtonic
    provider: jkube
    version: 1.0.0
    group: es.udc.fi.dc.fd
  name: gymtonic
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: gymtonic
      provider: jkube
      group: es.udc.fi.dc.fd
  template:
    metadata:
      annotations:
        jkube.io/scm-url: https://gitlab.fic.udc.es/ferramentas.2025/gymtonic
        jkube.io/issue-system: Redmine
        jkube.io/issue-tracker-url: https://redmine.fic.udc.es/projects/gymtonic/issues
        jkube.io/scm-tag: head
      labels:
        app: gymtonic
        provider: jkube
        version: 1.0.0
        group: es.udc.fi.dc.fd
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: HOSTNAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        image: gitlab.fic.udc.es:5050/ferramentas.2025/gymtonic:latest
        imagePullPolicy: Always
        name: deploy-gymtonic
        securityContext:
          privileged: false
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: fd-reg-cred
